# portfolio

./: .gitignore  CMakeLists.txt  LICENSE  MANUAL.md  README.md  build.bat  rebuild.bat  update.bat
.github/workflows/: ci.yml
include/: artifact_collector.h  common.h  file_info.h  hash.h  lnk_parser.h  mft_parser.h  report.h
src/: artifact_collector.cpp  common.cpp  file_info.cpp  hash.cpp  lnk_parser.cpp  main.cpp  main_gui.cpp  mft_parser.cpp  report.cpp
tests/: test_main.cpp
ui/: analyze_tab.cpp  analyze_tab.h  artifacts_tab.cpp  artifacts_tab.h  lnk_tab.cpp  lnk_tab.h  main_window.cpp  main_window.h  timeline_tab.cpp  timeline_tab.h  worker.cpp  worker.h
